重构项目结构并修复文件上传功能
- 重新组织项目目录结构（src/, docs/, scripts/, sql/）
- 修复文件上传功能，解决中文字符导致的 HTTP/2 协议错误
- 优化文件名处理，使用安全的文件名生成方式
- 修复流水号更新问题，确保每次生成都是新记录
- 增强错误处理和日志输出
- 添加存储桶诊断和测试脚本
- 完善文档和故障排除指南

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "setup:env": "node setup-env.cjs",
-    "test:supabase": "tsx test-supabase.ts",
-    "test:database": "tsx test-database.ts",
-    "test:receipts": "tsx test-receipt-records.ts",
-    "check:tables": "tsx check-tables.ts"
+    "setup:env": "node scripts/setup-env.cjs",
+    "test:supabase": "tsx scripts/test-supabase.ts",
+    "test:database": "tsx scripts/test-database.ts",
+    "test:receipts": "tsx scripts/test-receipt-records.ts",
+    "test:storage": "tsx scripts/test-storage-upload.ts",
+    "test:storage-direct": "tsx scripts/test-storage-direct.ts",
+    "check:bucket": "tsx scripts/check-bucket-direct.ts",
+    "check:tables": "tsx scripts/check-tables.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.93.3"
